--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -53,24 +53,25 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-QuoteFilterTest.$(OBJEXT) test_cpp-Error.$(OBJEXT) \
 	test_cpp-Translator.$(OBJEXT) test_cpp-Tokenizer.$(OBJEXT) \
 	test_cpp-Number.$(OBJEXT) test_cpp-String.$(OBJEXT) \
-	test_cpp-Charcter.$(OBJEXT) test_cpp-Definition.$(OBJEXT) \
-	test_cpp-Quote.$(OBJEXT) test_cpp-Object.$(OBJEXT) \
-	test_cpp-Eval.$(OBJEXT) test_cpp-Variable.$(OBJEXT) \
-	test_cpp-Assignment.$(OBJEXT) test_cpp-SpecialIf.$(OBJEXT) \
-	test_cpp-Frame.$(OBJEXT) test_cpp-Environment.$(OBJEXT) \
-	test_cpp-Lambda.$(OBJEXT) test_cpp-Procedure.$(OBJEXT) \
-	test_cpp-Begin.$(OBJEXT) test_cpp-SExp.$(OBJEXT) \
-	test_cpp-Macro.$(OBJEXT) test_cpp-MacroFilter.$(OBJEXT) \
-	test_cpp-QuoteFilter.$(OBJEXT) test_cpp-Parser.$(OBJEXT) \
-	test_cpp-Cond.$(OBJEXT) test_cpp-Pair.$(OBJEXT) \
-	test_cpp-Let.$(OBJEXT) test_cpp-LetAsterisk.$(OBJEXT) \
-	test_cpp-scheme.$(OBJEXT) test_cpp-load.$(OBJEXT) \
-	test_cpp-Application.$(OBJEXT) test_cpp-Plus.$(OBJEXT) \
-	test_cpp-Minus.$(OBJEXT) test_cpp-Divide.$(OBJEXT) \
-	test_cpp-Multiply.$(OBJEXT) test_cpp-Cons.$(OBJEXT) \
-	test_cpp-Car.$(OBJEXT) test_cpp-Cdr.$(OBJEXT) \
-	test_cpp-Display.$(OBJEXT) test_cpp-StringP.$(OBJEXT) \
-	test_cpp-NumberP.$(OBJEXT) test_cpp-NumberEqual.$(OBJEXT) \
+	test_cpp-Charcter.$(OBJEXT) test_cpp-Vector.$(OBJEXT) \
+	test_cpp-Definition.$(OBJEXT) test_cpp-Quote.$(OBJEXT) \
+	test_cpp-Object.$(OBJEXT) test_cpp-Eval.$(OBJEXT) \
+	test_cpp-Variable.$(OBJEXT) test_cpp-Assignment.$(OBJEXT) \
+	test_cpp-SpecialIf.$(OBJEXT) test_cpp-Frame.$(OBJEXT) \
+	test_cpp-Environment.$(OBJEXT) test_cpp-Lambda.$(OBJEXT) \
+	test_cpp-Procedure.$(OBJEXT) test_cpp-Begin.$(OBJEXT) \
+	test_cpp-SExp.$(OBJEXT) test_cpp-Macro.$(OBJEXT) \
+	test_cpp-MacroFilter.$(OBJEXT) test_cpp-QuoteFilter.$(OBJEXT) \
+	test_cpp-Parser.$(OBJEXT) test_cpp-Cond.$(OBJEXT) \
+	test_cpp-Pair.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
+	test_cpp-LetAsterisk.$(OBJEXT) test_cpp-scheme.$(OBJEXT) \
+	test_cpp-load.$(OBJEXT) test_cpp-Application.$(OBJEXT) \
+	test_cpp-Plus.$(OBJEXT) test_cpp-Minus.$(OBJEXT) \
+	test_cpp-Divide.$(OBJEXT) test_cpp-Multiply.$(OBJEXT) \
+	test_cpp-Cons.$(OBJEXT) test_cpp-Car.$(OBJEXT) \
+	test_cpp-Cdr.$(OBJEXT) test_cpp-Display.$(OBJEXT) \
+	test_cpp-StringP.$(OBJEXT) test_cpp-NumberP.$(OBJEXT) \
+	test_cpp-NumberEqual.$(OBJEXT) \
 	test_cpp-StringToNumber.$(OBJEXT) \
 	test_cpp-StringAppend.$(OBJEXT) test_cpp-Set.$(OBJEXT) \
 	test_cpp-Eqv.$(OBJEXT) test_cpp-True.$(OBJEXT) \
@@ -200,6 +201,8 @@ QuoteFilterTest.cpp\
 ../src/String.h\
 ../src/Charcter.cpp\
 ../src/Charcter.h\
+../src/Vector.cpp\
+../src/Vector.h\
 ../src/Definition.cpp\
 ../src/Definition.h\
 ../src/Quote.cpp\
@@ -425,6 +428,12 @@ test_cpp-Charcter.o: ../src/Charcter.cpp
 
 test_cpp-Charcter.obj: ../src/Charcter.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Charcter.obj `if test -f '../src/Charcter.cpp'; then $(CYGPATH_W) '../src/Charcter.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Charcter.cpp'; fi`
+
+test_cpp-Vector.o: ../src/Vector.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Vector.o `test -f '../src/Vector.cpp' || echo '$(srcdir)/'`../src/Vector.cpp
+
+test_cpp-Vector.obj: ../src/Vector.cpp
+	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Vector.obj `if test -f '../src/Vector.cpp'; then $(CYGPATH_W) '../src/Vector.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Vector.cpp'; fi`
 
 test_cpp-Definition.o: ../src/Definition.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Definition.o `test -f '../src/Definition.cpp' || echo '$(srcdir)/'`../src/Definition.cpp
