--- a/experimental/higepon/scheme/test_cpp/Makefile.in
+++ b/experimental/higepon/scheme/test_cpp/Makefile.in
@@ -66,14 +66,11 @@ am_test_cpp_OBJECTS = test_cpp-main.$(OBJEXT) test_cpp-yaml.$(OBJEXT) \
 	test_cpp-Pair.$(OBJEXT) test_cpp-Let.$(OBJEXT) \
 	test_cpp-LetAsterisk.$(OBJEXT) test_cpp-scheme.$(OBJEXT) \
 	test_cpp-load.$(OBJEXT) test_cpp-Application.$(OBJEXT) \
-	test_cpp-Plus.$(OBJEXT) test_cpp-Minus.$(OBJEXT) \
-	test_cpp-Divide.$(OBJEXT) test_cpp-Multiply.$(OBJEXT) \
 	test_cpp-Cons.$(OBJEXT) test_cpp-Car.$(OBJEXT) \
 	test_cpp-Cdr.$(OBJEXT) test_cpp-Display.$(OBJEXT) \
-	test_cpp-NumberP.$(OBJEXT) test_cpp-NumberEqual.$(OBJEXT) \
 	test_cpp-Set.$(OBJEXT) test_cpp-Eqv.$(OBJEXT) \
 	test_cpp-True.$(OBJEXT) test_cpp-False.$(OBJEXT) \
-	test_cpp-CharcterP.$(OBJEXT) test_cpp-Load.$(OBJEXT)
+	test_cpp-Load.$(OBJEXT)
 test_cpp_OBJECTS = $(am_test_cpp_OBJECTS)
 test_cpp_LDADD = $(LDADD)
 DEFAULT_INCLUDES = -I. -I$(srcdir) -I$(top_builddir)
@@ -249,14 +246,6 @@ QuoteFilterTest.cpp\
 ../src/Application.cpp\
 ../src/Application.h\
 ../src/PrimitiveProcedure.h\
-../src/PrimitiveProcedures/Plus.cpp\
-../src/PrimitiveProcedures/Plus.h\
-../src/PrimitiveProcedures/Minus.cpp\
-../src/PrimitiveProcedures/Minus.h\
-../src/PrimitiveProcedures/Divide.cpp\
-../src/PrimitiveProcedures/Divide.h\
-../src/PrimitiveProcedures/Multiply.cpp\
-../src/PrimitiveProcedures/Multiply.h\
 ../src/PrimitiveProcedures/Cons.cpp\
 ../src/PrimitiveProcedures/Cons.h\
 ../src/PrimitiveProcedures/Car.cpp\
@@ -265,10 +254,6 @@ QuoteFilterTest.cpp\
 ../src/PrimitiveProcedures/Cdr.h\
 ../src/PrimitiveProcedures/Display.cpp\
 ../src/PrimitiveProcedures/Display.h\
-../src/PrimitiveProcedures/NumberP.cpp\
-../src/PrimitiveProcedures/NumberP.h\
-../src/PrimitiveProcedures/NumberEqual.cpp\
-../src/PrimitiveProcedures/NumberEqual.h\
 ../src/PrimitiveProcedures/Set.cpp\
 ../src/PrimitiveProcedures/Set.h\
 ../src/PrimitiveProcedures/Eqv.h\
@@ -277,8 +262,6 @@ QuoteFilterTest.cpp\
 ../src/PrimitiveProcedures/True.cpp\
 ../src/PrimitiveProcedures/False.h\
 ../src/PrimitiveProcedures/False.cpp\
-../src/PrimitiveProcedures/CharcterP.h\
-../src/PrimitiveProcedures/CharcterP.cpp\
 ../src/PrimitiveProcedures/Load.h\
 ../src/PrimitiveProcedures/Load.cpp
 
@@ -570,30 +553,6 @@ test_cpp-Application.o: ../src/Application.cpp
 test_cpp-Application.obj: ../src/Application.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Application.obj `if test -f '../src/Application.cpp'; then $(CYGPATH_W) '../src/Application.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/Application.cpp'; fi`
 
-test_cpp-Plus.o: ../src/PrimitiveProcedures/Plus.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Plus.o `test -f '../src/PrimitiveProcedures/Plus.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Plus.cpp
-
-test_cpp-Plus.obj: ../src/PrimitiveProcedures/Plus.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Plus.obj `if test -f '../src/PrimitiveProcedures/Plus.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Plus.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Plus.cpp'; fi`
-
-test_cpp-Minus.o: ../src/PrimitiveProcedures/Minus.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Minus.o `test -f '../src/PrimitiveProcedures/Minus.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Minus.cpp
-
-test_cpp-Minus.obj: ../src/PrimitiveProcedures/Minus.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Minus.obj `if test -f '../src/PrimitiveProcedures/Minus.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Minus.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Minus.cpp'; fi`
-
-test_cpp-Divide.o: ../src/PrimitiveProcedures/Divide.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Divide.o `test -f '../src/PrimitiveProcedures/Divide.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Divide.cpp
-
-test_cpp-Divide.obj: ../src/PrimitiveProcedures/Divide.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Divide.obj `if test -f '../src/PrimitiveProcedures/Divide.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Divide.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Divide.cpp'; fi`
-
-test_cpp-Multiply.o: ../src/PrimitiveProcedures/Multiply.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Multiply.o `test -f '../src/PrimitiveProcedures/Multiply.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Multiply.cpp
-
-test_cpp-Multiply.obj: ../src/PrimitiveProcedures/Multiply.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Multiply.obj `if test -f '../src/PrimitiveProcedures/Multiply.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Multiply.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Multiply.cpp'; fi`
-
 test_cpp-Cons.o: ../src/PrimitiveProcedures/Cons.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Cons.o `test -f '../src/PrimitiveProcedures/Cons.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Cons.cpp
 
@@ -618,18 +577,6 @@ test_cpp-Display.o: ../src/PrimitiveProcedures/Display.cpp
 test_cpp-Display.obj: ../src/PrimitiveProcedures/Display.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Display.obj `if test -f '../src/PrimitiveProcedures/Display.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/Display.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/Display.cpp'; fi`
 
-test_cpp-NumberP.o: ../src/PrimitiveProcedures/NumberP.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-NumberP.o `test -f '../src/PrimitiveProcedures/NumberP.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/NumberP.cpp
-
-test_cpp-NumberP.obj: ../src/PrimitiveProcedures/NumberP.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-NumberP.obj `if test -f '../src/PrimitiveProcedures/NumberP.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/NumberP.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/NumberP.cpp'; fi`
-
-test_cpp-NumberEqual.o: ../src/PrimitiveProcedures/NumberEqual.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-NumberEqual.o `test -f '../src/PrimitiveProcedures/NumberEqual.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/NumberEqual.cpp
-
-test_cpp-NumberEqual.obj: ../src/PrimitiveProcedures/NumberEqual.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-NumberEqual.obj `if test -f '../src/PrimitiveProcedures/NumberEqual.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/NumberEqual.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/NumberEqual.cpp'; fi`
-
 test_cpp-Set.o: ../src/PrimitiveProcedures/Set.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Set.o `test -f '../src/PrimitiveProcedures/Set.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Set.cpp
 
@@ -653,12 +600,6 @@ test_cpp-False.o: ../src/PrimitiveProcedures/False.cpp
 
 test_cpp-False.obj: ../src/PrimitiveProcedures/False.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-False.obj `if test -f '../src/PrimitiveProcedures/False.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/False.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/False.cpp'; fi`
-
-test_cpp-CharcterP.o: ../src/PrimitiveProcedures/CharcterP.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-CharcterP.o `test -f '../src/PrimitiveProcedures/CharcterP.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/CharcterP.cpp
-
-test_cpp-CharcterP.obj: ../src/PrimitiveProcedures/CharcterP.cpp
-	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-CharcterP.obj `if test -f '../src/PrimitiveProcedures/CharcterP.cpp'; then $(CYGPATH_W) '../src/PrimitiveProcedures/CharcterP.cpp'; else $(CYGPATH_W) '$(srcdir)/../src/PrimitiveProcedures/CharcterP.cpp'; fi`
 
 test_cpp-Load.o: ../src/PrimitiveProcedures/Load.cpp
 	$(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) $(CPPFLAGS) $(test_cpp_CXXFLAGS) $(CXXFLAGS) -c -o test_cpp-Load.o `test -f '../src/PrimitiveProcedures/Load.cpp' || echo '$(srcdir)/'`../src/PrimitiveProcedures/Load.cpp
